# gr-limesdr

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
builddir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  install_manifest.txt
builddir/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/docs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/docs/doxygen/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
builddir/docs/doxygen/html/: annotated.html  annotated_dup.js  api_8h.html  api_8h.js  api_8h__dep__incl.map  api_8h__dep__incl.md5  api_8h__incl.map  api_8h_source.html  builddir_2python_2limesdr_2bindings_2pydoc__macros_8h.html  builddir_2python_2limesdr_2bindings_2pydoc__macros_8h.js  builddir_2python_2limesdr_2bindings_2pydoc__macros_8h_source.html  classdevice__handler-members.html  classdevice__handler.html  classdevice__handler.js  classes.html  classgr_1_1limesdr_1_1rfe-members.html  classgr_1_1limesdr_1_1rfe.html  classgr_1_1limesdr_1_1rfe.js  classgr_1_1limesdr_1_1sink-members.html  classgr_1_1limesdr_1_1sink.html  classgr_1_1limesdr_1_1sink.js  (+115 more)
builddir/grc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libgnuradio-limesdr.so.1.0.0  libgnuradio-limesdr.so.1.0.0.0
builddir/python/limesdr/: CTestTestfile.cmake  Makefile  cmake_install.cmake
builddir/test_modules/gnuradio/limesdr/bindings/: CMakeLists.txt  python_bindings.cc  rfe_python.cc  source_python.cc
builddir/test_modules/gnuradio/limesdr/bindings/docstrings/: rfe_pydoc_template.h  source_pydoc_template.h
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in  install_manifest.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  gnuradio-limesdrConfig.cmake  limesdrConfig.cmake
cmake/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/docs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/grc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/include/limesdr/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/python/: CTestTestfile.cmake  Makefile  __init__.pyo  cmake_install.cmake
cmake/swig/: CTestTestfile.cmake  Makefile  _limesdr_swig_swig_tag  cmake_install.cmake  limesdr_swig.py  limesdr_swig.pyo  limesdr_swigPYTHON_wrap.cxx  limesdr_swig_swig_2d0df
debian/: changelog  control  rules
docs/: CMakeLists.txt  known_issues.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
examples/: DVB_T_2k_64QAM_TX.grc  FM_RDS.grc  FM_receiver.grc  FM_transmitter.grc  GFSK.grc  LimeSDR_USB_DVB_T_Demo_2k.py  signal_analyzer.grc  signal_analyzer_with_rfe.grc  signal_generator.grc
grc/: CMakeLists.txt  limerfe.block.yml  limesdr_rfe.block.yml  limesdr_rfe.xml  limesdr_sink.block.yml  limesdr_sink.xml  limesdr_source.block.yml  limesdr_source.xml
include/gnuradio/limesdr/: CMakeLists.txt  rfe.h  sink.h  source.h
include/limesdr/: CMakeLists.txt  api.h  rfe.h  sink.h  source.h
lib/: CMakeLists.txt  device_handler.cc  device_handler.h  logging.cc  logging.h  rfe_impl.cc  sink_impl.cc  sink_impl.h  source_impl.cc  source_impl.h
lib/common/: device_handler.cc  device_handler.h
python/: CMakeLists.txt  __init__.py  qa_source.py
python/bindings/: CMakeLists.txt  python_bindings.cc  rfe_python.cc  sink_python.cc  source_python.cc
python/bindings/docstrings/: rfe_pydoc_template.h  sink_pydoc_template.h  source_pydoc_template.h
python/limesdr/: CMakeLists.txt
python/limesdr/bindings/: sink_python.cc
swig/: CMakeLists.txt  limesdr_swig.i
(+60 files in other folders)
